<resources>
    <string name="app_name">蓝牙考勤</string>

    <string name="prompt_email">账户名</string>
    <string name="prompt_password">密码 (至少 6 位)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">账号登录</string>
    <string name="error_invalid_account">请输入正确的账号</string>
    <string name="error_invalid_password">密码太短啦！</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">该项为必填项</string>
    <string name="toastNetworkError">请求出错，请重试</string>
    <string name="toastLoginRequestSuccess">登录成功</string>
    <string name="toastTokenError">身份验证失败，请重新登陆</string>
    <string name="toastDataEmpty">暂无数据</string>
    <string name="groupAttendanceCompleted">已考勤</string>
    <string name="groupAttendanceRecord">查看</string>
    <string name="groupAttendanceStart">考勤</string>
    <string name="groupAttendanceUnstarted">未考勤</string>
    <string name="menu_title_attenance_completed">结束考勤</string>
    <string name="devices_does_not_support_bluetooth">该设备不支持蓝牙功能，暂时无法考勤！</string>
    <string name="title_alert_bluetooth_warning">提示</string>
    <string name="permission_location_reason">由于系统设置要求，获取蓝牙扫描结果需要位置信息权限，不授予该权限则无法获取蓝牙扫描结果！</string>
    <string name="title_alert_permission">权限申请</string>
    <string name="groupAttendance">考勤</string>
    <string name="groupAttendanceFinish">考勤已经结束，请拍摄一张照片作为以后查验的依据</string>
    <string name="groupAttendanceProcessing">正在进行考勤，您是否要结束考勤？\n结束考勤需要拍摄一张照片作为以后查验的依据</string>
    <string name="attendanceWarning">考勤提示</string>
    <string name="attendanceFinishAlertYesButton">结束</string>
    <string name="bluetoothScanFailed">蓝牙扫描失败，是否重试？</string>
    <string name="bluetoothScanRetry">重试</string>
    <string name="addGroupTitle">添加分组</string>
    <string name="addGroupContent">请在下方输入框中输入新分组的名称</string>
    <string name="hintGroupName">请输入分组名称</string>
    <string name="toastGroupNameEmpty">分组名称不能为空</string>
    <string name="titleAddActivity">添加考勤人员信息</string>
    <string name="prompt_name">学生姓名</string>
    <string name="prompt_bluetooth_mac">蓝牙 MAC 地址</string>
    <string name="prompt_parent_phone">家长联系电话</string>
    <string name="menu_title_add_save">保存</string>
    <string name="error_invalid_name">请输入姓名</string>
    <string name="error_invalid_mac">请输入正确的 MAC 地址</string>
    <string name="error_invalid_student_id">学生 ID 不能为空</string>
    <string name="toastSaveSuccess">保存成功</string>
    <string name="prompt_student_id">学生编号</string>
    <string name="error_invalid_parent_phone">请输入 11 位手机号</string>
    <string name="formatAttendanceRatio">已考勤：%1$d / 未考勤：%2$d</string>
    <string name="titleUserInfo">个人信息</string>
    <string name="formatUserName">姓名：%s</string>
    <string name="formatLecMac">蓝牙 MAC：%s</string>
    <string name="formatGroupName">分组名称：%s</string>
    <string name="formatStudentId">学号：%s</string>
    <string name="formatParentPhone">家长联系电话：%s</string>
    <string name="formatStatus">状态：%s</string>
    <string name="formatTime">时间：%s</string>
    <string name="provider_name">cn.zhangls.android.attendance.fileprovider</string>
    <string name="permission_storage_reason">应用需要将拍摄的照片保存到外部存储中，所以需要 存储空间 权限，请授权给我们吧！ </string>
    <string name="toastImageSaveSuccess">照片保存成功</string>
    <string name="toastImageSaveFail">照片未保存</string>
    <string name="menu_title_picture">查看照片</string>
    <string name="toastUploadSuccess">文件上传成功</string>
</resources>
